# time-tracker

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  TimeTracker.vcxproj  time_log.csv
.github/workflows/: build.yml  release.yml
include/: input.h  key_wait.h  posh.h  stdafx.h  stopwatch.h  timeformat.h  tracker.h
include/system/: captures.h  hours-file.h  input.h  screen-controller.h
include/time/: formatting.h  hours-file.h  punch-clock.h
include/tracking/: figures.h  punch-clock.h  stopwatch.h  timeformat.h  tracker.h
src/: input.cpp  key_wait.cpp  main.cpp  stopwatch.cpp  tracker.cpp
src/system/: hours-file.cpp  input.cpp  screen-controller.cpp
src/time/: hours-file.cpp  punch-clock.cpp
src/tracking/: punch-clock.cpp  stopwatch.cpp  tracker.cpp
